--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string-array name="opciones_array">
         <item>Convivio</item>
         <item>Charla</item>
+        <string name="BotonCrear"> Crear Cuenta</string>
     </string-array>
 </resources>
