Pantalla ver estadisticas
Conexión a la base

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     </string-array>
     <string name="BotonCrear">Crear Cuenta</string>
     <string name="choose_time">Elige una hora</string>
+
+    <string-array name="Vacio_array">
+        <item>Sin eventos</item>
+    </string-array>
 </resources>
