--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,28 @@
         <item>Charla</item>
     </string-array>
     <string name="BotonCrear">Crear Cuenta</string>
+    <string name="categorias_eventos">Elige una categoría</string>
+
     <string name="choose_time">Elige una hora</string>
+    <string name="choose_date">Elige una fecha</string>
     <string-array name="sedes_array">
         <item>San José</item>
         <item>Cartago</item>
         <item>Alajuela</item>
         <item>San Carlos</item>
         <item>Limón</item>
+    </string-array>
+    <string-array name="categorias_eventos">
+        <item>Académico</item>
+        <item>Cultural</item>
+        <item>Deportivo</item>
+        <item>Social y Comunitario</item>
+        <item>Tecnología y Ciencia</item>
+        <item>Entretenimiento</item>
+        <item>Ambiental y Sostenibilidad</item>
+        <item>Emprendimiento</item>
+        <item>Salud y Bienestar</item>
+        <item>Viajes </item>
     </string-array>
     <string-array name="Vacio_array">
         <item>Sin actividades</item>
